# libgeoformats

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac  geoformats-1.0.pc.in
src/: Makefile.am  gpx-parser-structure.vala  gpx-parser.vala  kml-parser-structure.vala  kml-parser.vala  xml-helper.vala
test/: Makefile.am  gpx-parser-test.vala  kml-parser-test.vala  testmain.vala
test/gpx_test_documents/: multiple_tracks.gpx  simple.gpx
test/kml_test_documents/: advanced_network_link.kml  advanced_network_link_2.kml  common_features.kml  document_with_style.kml  document_with_style_and_style_map.kml  feature_description.kml  nested_folders.kml  simple_document.kml  simple_network_link.kml  simple_placemark_linestring.kml  simple_placemark_point.kml  simple_polygon.kml
