NULL =

SUBDIRS = \
	src \
	test \
	$(NULL)

libgeoformatsdocdir = ${prefix}/doc/libgeoformats
libgeoformatsdoc_DATA = \
	ChangeLog \
	README \
	COPYING \
	AUTHORS \
	INSTALL \
	NEWS\
	$(NULL)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = geoformats-1.0.pc

EXTRA_DIST = \
	geoformats-1.0.pc.in \
	$(NULL)
