AC_INIT([libgeoformats], [0.0.1], [quikee@gmail.com], [libgeoformats])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])

AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

LIBGEOFORMATS_LT_VERSION="1:0:0"
AC_SUBST(LIBGEOFORMATS_LT_VERSION)

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AC_SUBST(VALAFLAGS)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.12.0

PKG_CHECK_MODULES(LIBGEOFORMATS, [
	glib-2.0 >= $GLIB_REQUIRED
	gobject-2.0 >= $GLIB_REQUIRED
	json-glib-1.0 >= 0.7.6
	libxml-2.0 >= 2.7.5])

AC_SUBST(LIBGEOFORMATS_CFLAGS)
AC_SUBST(LIBGEOFORMATS_LIBS)

AC_CONFIG_FILES([Makefile
	geoformats-1.0.pc
	src/Makefile
	test/Makefile])

AC_OUTPUT
